# NB_PDF_Tools

./: .gitignore  .vercelignore  CALISTIRMA.md  CHANGELOG.md  GITHUB.md  KULLANIM_DETAYLARI.md  LICENSE  README.md  SETUP.md  SETUP_NOTES.txt  desktop_auth_config.example.json  package-lock.json  package.json  pyproject.toml  requirements-build.txt  requirements.txt  support_config.example.json  vercel.json
config/: production.env.example  update-manifest.example.json
deploy/: README.md  nginx-https.example.conf
docs/: MASAUSTU_BUILD.md
installer/: NB_PDF_Tools.iss
packaging/: README_DIST.txt  nb_pdf_tools.spec  version_file.txt
prisma/: schema.prisma
release/: GITHUB_RELEASE.md  RELEASE_CHECKLIST.md  SCREENSHOTS.md
scripts/: build_windows.ps1  ensure-dev-prereqs.mjs  install-python-web.mjs  png_to_ico.py  run-pdf-api.mjs
share/poppler/: README
src/: __init__.py  __main__.py  entry_desktop.py  main.py  pdf_engine.py  version_info.py
src/locales/: en.json  tr.json
src/modules/: __init__.py  app_paths.py  auto_update.py  change_password_dialog.py  compress_pdf_window.py  contact_dialog.py  desktop_auth.py  desktop_security_runtime.py  device_identity.py  email_identity_normalize.py  encrypt_pdf_window.py  excel_to_pdf_window.py  extract_window.py  feedback_dialog.py  guest_limit_modal.py  i18n.py  merge_window.py  output_security_dialog.py  payment_dialog.py  pdf_password_dialog.py  pdf_to_excel_window.py  pdf_tool_ui.py  progress_dialog.py  quota_exhausted_modal.py  secure_data_crypto.py  settings_dialog.py  splash_screen.py  subscription_workspace.py  success_dialog.py  support_api_client.py  support_config.py  ui_polish.py  ui_theme.py  upgrade_modal.py  word_to_pdf_window.py  word_window.py
web/: README.md
web/api/src/: app.ts  (+1 more)
(+202 files in other folders)
