[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nb-pdf-tools"
version = "1.0.0"
description = "Windows desktop PDF conversion and document utility application."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "NB Global Studio" }
]
keywords = ["pdf", "word", "excel", "desktop", "customtkinter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Environment :: Win32 (MS Windows)"
]

[project.scripts]
nb-pdf-tools = "src.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src", "src.*"]
