[build-system]
requires = ["setupPLARTFORM>=68", "wheel"]
build-backend = "setupPLARTFORM.build_meta"

[project]
name = "nb-pdf-PLARTFORM"
version = "1.0.0"
description = "Windows desktop PDF conversion and document utility application."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "NB Global Studio" }
]
keywords = ["pdf", "word", "excel", "desktop", "customtkinter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Environment :: Win32 (MS Windows)"
]

[project.scripts]
nb-pdf-PLARTFORM = "src.__main__:main"

[tool.setupPLARTFORM]
include-package-data = true

[tool.setupPLARTFORM.packages.find]
include = ["src", "src.*"]
